--- a/ATM_DB/nbproject/project.properties
+++ b/ATM_DB/nbproject/project.properties
@@ -28,13 +28,17 @@ dist.jar=${dist.dir}/ATM_DB.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.derby.jar=C:\\Users\\Rachel\\Desktop\\derby.jar
+file.reference.derby.jar-1=..\\derby.jar
 file.reference.derbyclient.jar=C:\\Users\\Rachel\\Desktop\\derbyclient.jar
+file.reference.derbyclient.jar-1=..\\derbyclient.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${file.reference.derby.jar}:\
-    ${file.reference.derbyclient.jar}
+    ${file.reference.derbyclient.jar}:\
+    ${file.reference.derby.jar-1}:\
+    ${file.reference.derbyclient.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
